# gushare-backend

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: isort.yml  linting.yml  pytest.yml  testing.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py  0002_building_geo.py  0003_alter_building_geo.py  0003_room.py  0004_rename_amenity_feature_building_amenity_features_and_more.py  0004_workplace.py  0005_alter_workplace_equipment_booking.py  0005_rename_favorite_workplace_user_favorite_workplaces.py  0006_alter_user_favorite_workplaces.py  0006_user_workplace_favorite_workplace.py  0007_rename_workplace_booking_workplaces.py
api/tests/: conftest.py  test_base_models.py  test_serializers.py  test_views.py
api/tests/conftest_files/: booking_conftest.py  building_conftest.py  general_conftest.py  room_conftest.py  user_conftest.py  workplace_conftest.py
config/: urls.py
config/settings/: common.py  local.py  production.py
docker/dokku/: Dockerfile
docker/local/: Dockerfile.web
